--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,6 +6,9 @@
     <!-- collapse navbar-collapse -->
     <div class="navbar-default">
       <ul class="nav navbar-nav">
+        <li routerLinkActive="active">
+          <a routerLink="/auth">Authentication</a>
+        </li>
         <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
         <li routerLinkActive="active">
           <a routerLink="/shopping-list">Shopping List</a>
